--- a/Covid-19.ipynb
+++ b/Covid-19.ipynb
@@ -9,6 +9,533 @@
     "import numpy as np \n",
     "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"RAW_global_confirmed_cases.csv\")\n",
+    "df1 = pd.read_csv(\"RAW_global_deaths.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>Province/State</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long</th>\n",
+       "      <th>1/22/20</th>\n",
+       "      <th>1/23/20</th>\n",
+       "      <th>1/24/20</th>\n",
+       "      <th>1/25/20</th>\n",
+       "      <th>1/26/20</th>\n",
+       "      <th>1/27/20</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2/28/23</th>\n",
+       "      <th>3/1/23</th>\n",
+       "      <th>3/2/23</th>\n",
+       "      <th>3/3/23</th>\n",
+       "      <th>3/4/23</th>\n",
+       "      <th>3/5/23</th>\n",
+       "      <th>3/6/23</th>\n",
+       "      <th>3/7/23</th>\n",
+       "      <th>3/8/23</th>\n",
+       "      <th>3/9/23</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>33.93911</td>\n",
+       "      <td>67.709953</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>209322</td>\n",
+       "      <td>209340</td>\n",
+       "      <td>209358</td>\n",
+       "      <td>209362</td>\n",
+       "      <td>209369</td>\n",
+       "      <td>209390</td>\n",
+       "      <td>209406</td>\n",
+       "      <td>209436</td>\n",
+       "      <td>209451</td>\n",
+       "      <td>209451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>41.15330</td>\n",
+       "      <td>20.168300</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>334391</td>\n",
+       "      <td>334408</td>\n",
+       "      <td>334408</td>\n",
+       "      <td>334427</td>\n",
+       "      <td>334427</td>\n",
+       "      <td>334427</td>\n",
+       "      <td>334427</td>\n",
+       "      <td>334427</td>\n",
+       "      <td>334443</td>\n",
+       "      <td>334457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28.03390</td>\n",
+       "      <td>1.659600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>271441</td>\n",
+       "      <td>271448</td>\n",
+       "      <td>271463</td>\n",
+       "      <td>271469</td>\n",
+       "      <td>271469</td>\n",
+       "      <td>271477</td>\n",
+       "      <td>271477</td>\n",
+       "      <td>271490</td>\n",
+       "      <td>271494</td>\n",
+       "      <td>271496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>42.50630</td>\n",
+       "      <td>1.521800</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>47866</td>\n",
+       "      <td>47875</td>\n",
+       "      <td>47875</td>\n",
+       "      <td>47875</td>\n",
+       "      <td>47875</td>\n",
+       "      <td>47875</td>\n",
+       "      <td>47875</td>\n",
+       "      <td>47875</td>\n",
+       "      <td>47890</td>\n",
+       "      <td>47890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-11.20270</td>\n",
+       "      <td>17.873900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>105255</td>\n",
+       "      <td>105277</td>\n",
+       "      <td>105277</td>\n",
+       "      <td>105277</td>\n",
+       "      <td>105277</td>\n",
+       "      <td>105277</td>\n",
+       "      <td>105277</td>\n",
+       "      <td>105277</td>\n",
+       "      <td>105288</td>\n",
+       "      <td>105288</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 1147 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Country/Region Province/State       Lat       Long  1/22/20  1/23/20   \n",
+       "0    Afghanistan            NaN  33.93911  67.709953        0        0  \\\n",
+       "1        Albania            NaN  41.15330  20.168300        0        0   \n",
+       "2        Algeria            NaN  28.03390   1.659600        0        0   \n",
+       "3        Andorra            NaN  42.50630   1.521800        0        0   \n",
+       "4         Angola            NaN -11.20270  17.873900        0        0   \n",
+       "\n",
+       "   1/24/20  1/25/20  1/26/20  1/27/20  ...  2/28/23  3/1/23  3/2/23  3/3/23   \n",
+       "0        0        0        0        0  ...   209322  209340  209358  209362  \\\n",
+       "1        0        0        0        0  ...   334391  334408  334408  334427   \n",
+       "2        0        0        0        0  ...   271441  271448  271463  271469   \n",
+       "3        0        0        0        0  ...    47866   47875   47875   47875   \n",
+       "4        0        0        0        0  ...   105255  105277  105277  105277   \n",
+       "\n",
+       "   3/4/23  3/5/23  3/6/23  3/7/23  3/8/23  3/9/23  \n",
+       "0  209369  209390  209406  209436  209451  209451  \n",
+       "1  334427  334427  334427  334427  334443  334457  \n",
+       "2  271469  271477  271477  271490  271494  271496  \n",
+       "3   47875   47875   47875   47875   47890   47890  \n",
+       "4  105277  105277  105277  105277  105288  105288  \n",
+       "\n",
+       "[5 rows x 1147 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>Province/State</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long</th>\n",
+       "      <th>1/22/20</th>\n",
+       "      <th>1/23/20</th>\n",
+       "      <th>1/24/20</th>\n",
+       "      <th>1/25/20</th>\n",
+       "      <th>1/26/20</th>\n",
+       "      <th>1/27/20</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2/28/23</th>\n",
+       "      <th>3/1/23</th>\n",
+       "      <th>3/2/23</th>\n",
+       "      <th>3/3/23</th>\n",
+       "      <th>3/4/23</th>\n",
+       "      <th>3/5/23</th>\n",
+       "      <th>3/6/23</th>\n",
+       "      <th>3/7/23</th>\n",
+       "      <th>3/8/23</th>\n",
+       "      <th>3/9/23</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>33.93911</td>\n",
+       "      <td>67.709953</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7896</td>\n",
+       "      <td>7896</td>\n",
+       "      <td>7896</td>\n",
+       "      <td>7896</td>\n",
+       "      <td>7896</td>\n",
+       "      <td>7896</td>\n",
+       "      <td>7896</td>\n",
+       "      <td>7896</td>\n",
+       "      <td>7896</td>\n",
+       "      <td>7896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>41.15330</td>\n",
+       "      <td>20.168300</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3598</td>\n",
+       "      <td>3598</td>\n",
+       "      <td>3598</td>\n",
+       "      <td>3598</td>\n",
+       "      <td>3598</td>\n",
+       "      <td>3598</td>\n",
+       "      <td>3598</td>\n",
+       "      <td>3598</td>\n",
+       "      <td>3598</td>\n",
+       "      <td>3598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28.03390</td>\n",
+       "      <td>1.659600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6881</td>\n",
+       "      <td>6881</td>\n",
+       "      <td>6881</td>\n",
+       "      <td>6881</td>\n",
+       "      <td>6881</td>\n",
+       "      <td>6881</td>\n",
+       "      <td>6881</td>\n",
+       "      <td>6881</td>\n",
+       "      <td>6881</td>\n",
+       "      <td>6881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>42.50630</td>\n",
+       "      <td>1.521800</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>165</td>\n",
+       "      <td>165</td>\n",
+       "      <td>165</td>\n",
+       "      <td>165</td>\n",
+       "      <td>165</td>\n",
+       "      <td>165</td>\n",
+       "      <td>165</td>\n",
+       "      <td>165</td>\n",
+       "      <td>165</td>\n",
+       "      <td>165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-11.20270</td>\n",
+       "      <td>17.873900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>1933</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 1147 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Country/Region Province/State       Lat       Long  1/22/20  1/23/20   \n",
+       "0    Afghanistan            NaN  33.93911  67.709953        0        0  \\\n",
+       "1        Albania            NaN  41.15330  20.168300        0        0   \n",
+       "2        Algeria            NaN  28.03390   1.659600        0        0   \n",
+       "3        Andorra            NaN  42.50630   1.521800        0        0   \n",
+       "4         Angola            NaN -11.20270  17.873900        0        0   \n",
+       "\n",
+       "   1/24/20  1/25/20  1/26/20  1/27/20  ...  2/28/23  3/1/23  3/2/23  3/3/23   \n",
+       "0        0        0        0        0  ...     7896    7896    7896    7896  \\\n",
+       "1        0        0        0        0  ...     3598    3598    3598    3598   \n",
+       "2        0        0        0        0  ...     6881    6881    6881    6881   \n",
+       "3        0        0        0        0  ...      165     165     165     165   \n",
+       "4        0        0        0        0  ...     1933    1933    1933    1933   \n",
+       "\n",
+       "   3/4/23  3/5/23  3/6/23  3/7/23  3/8/23  3/9/23  \n",
+       "0    7896    7896    7896    7896    7896    7896  \n",
+       "1    3598    3598    3598    3598    3598    3598  \n",
+       "2    6881    6881    6881    6881    6881    6881  \n",
+       "3     165     165     165     165     165     165  \n",
+       "4    1933    1933    1933    1933    1933    1933  \n",
+       "\n",
+       "[5 rows x 1147 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In both the datasets Provinces/State data is unavailable, so lets drop it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns='Province/State')\n",
+    "df1 = df1.drop(columns='Province/State')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country/Region    0\n",
+      "Lat               2\n",
+      "Long              2\n",
+      "1/22/20           0\n",
+      "1/23/20           0\n",
+      "                 ..\n",
+      "3/5/23            0\n",
+      "3/6/23            0\n",
+      "3/7/23            0\n",
+      "3/8/23            0\n",
+      "3/9/23            0\n",
+      "Length: 1146, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "na = df.isna()\n",
+    "print(na.sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country/Region    0\n",
+      "Lat               2\n",
+      "Long              2\n",
+      "1/22/20           0\n",
+      "1/23/20           0\n",
+      "                 ..\n",
+      "3/5/23            0\n",
+      "3/6/23            0\n",
+      "3/7/23            0\n",
+      "3/8/23            0\n",
+      "3/9/23            0\n",
+      "Length: 1146, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "na1 = df1.isna()\n",
+    "print(na1.sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.dropna()\n",
+    "df1 = df1.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Cleaned, onto the data visualisation part"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
