--- a/Covid-19.ipynb
+++ b/Covid-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "[5 rows x 1147 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "[5 rows x 1147 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "[5 rows x 1146 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -674,13 +674,13 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 287 entries, 0 to 288\n",
+      "RangeIndex: 289 entries, 0 to 288\n",
       "Columns: 1146 entries, Country/Region to 3/9/23\n",
       "dtypes: float64(2), int64(1143), object(1)\n",
       "memory usage: 2.5+ MB\n",
       "None\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 287 entries, 0 to 288\n",
+      "RangeIndex: 289 entries, 0 to 288\n",
       "Columns: 1146 entries, Country/Region to 3/9/23\n",
       "dtypes: float64(2), int64(1143), object(1)\n",
       "memory usage: 2.5+ MB\n",
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2570,7 +2570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -4370,14 +4370,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Kshit\\AppData\\Local\\Temp\\ipykernel_5796\\374289915.py:15: FutureWarning:\n",
+      "C:\\Users\\Kshit\\AppData\\Local\\Temp\\ipykernel_9424\\374289915.py:15: FutureWarning:\n",
       "\n",
       "\n",
       "\n",
@@ -4423,14 +4423,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Kshit\\AppData\\Local\\Temp\\ipykernel_5796\\2629870029.py:15: FutureWarning:\n",
+      "C:\\Users\\Kshit\\AppData\\Local\\Temp\\ipykernel_9424\\2629870029.py:15: FutureWarning:\n",
       "\n",
       "\n",
       "\n",
@@ -4479,6 +4479,238 @@
    "metadata": {},
    "source": [
     "Done with Data Visualisation, Onto Algorithms\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow import keras\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import LSTM\n",
+    "from keras.layers import Dense\n",
+    "from keras.layers import Flatten\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "afghanistan_data = df[df[\"Country/Region\"] == \"Afghanistan\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long</th>\n",
+       "      <th>1/22/20</th>\n",
+       "      <th>1/23/20</th>\n",
+       "      <th>1/24/20</th>\n",
+       "      <th>1/25/20</th>\n",
+       "      <th>1/26/20</th>\n",
+       "      <th>1/27/20</th>\n",
+       "      <th>1/28/20</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2/28/23</th>\n",
+       "      <th>3/1/23</th>\n",
+       "      <th>3/2/23</th>\n",
+       "      <th>3/3/23</th>\n",
+       "      <th>3/4/23</th>\n",
+       "      <th>3/5/23</th>\n",
+       "      <th>3/6/23</th>\n",
+       "      <th>3/7/23</th>\n",
+       "      <th>3/8/23</th>\n",
+       "      <th>3/9/23</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>33.93911</td>\n",
+       "      <td>67.709953</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>209322</td>\n",
+       "      <td>209340</td>\n",
+       "      <td>209358</td>\n",
+       "      <td>209362</td>\n",
+       "      <td>209369</td>\n",
+       "      <td>209390</td>\n",
+       "      <td>209406</td>\n",
+       "      <td>209436</td>\n",
+       "      <td>209451</td>\n",
+       "      <td>209451</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 1146 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Country/Region       Lat       Long  1/22/20  1/23/20  1/24/20  1/25/20   \n",
+       "0    Afghanistan  33.93911  67.709953        0        0        0        0  \\\n",
+       "\n",
+       "   1/26/20  1/27/20  1/28/20  ...  2/28/23  3/1/23  3/2/23  3/3/23  3/4/23   \n",
+       "0        0        0        0  ...   209322  209340  209358  209362  209369  \\\n",
+       "\n",
+       "   3/5/23  3/6/23  3/7/23  3/8/23  3/9/23  \n",
+       "0  209390  209406  209436  209451  209451  \n",
+       "\n",
+       "[1 rows x 1146 columns]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "afghanistan_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_data(timeseries_data, n_features):\n",
+    "\tX, y =[],[]\n",
+    "\tfor i in range(len(timeseries_data)):\n",
+    "\t\t# find the end of this pattern\n",
+    "\t\tend_ix = i + n_features\n",
+    "\t\t# check if we are beyond the sequence\n",
+    "\t\tif end_ix > len(timeseries_data)-1:\n",
+    "\t\t\tbreak\n",
+    "\t\t# gather input and output parts of the pattern\n",
+    "\t\tseq_x, seq_y = timeseries_data[i:end_ix], timeseries_data[end_ix]\n",
+    "\t\tX.append(seq_x)\n",
+    "\t\ty.append(seq_y)\n",
+    "\treturn np.array(X), np.array(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "afghanistan_data =afghanistan_data.drop(columns=['Country/Region','Lat','Long'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timeseries_data = afghanistan_data.values.ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_features = 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, y = prepare_data(timeseries_data, n_features)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[     0      0      0 ...      8      8     11]\n",
+      " [     0      0      0 ...      8     11     11]\n",
+      " [     0      0      0 ...     11     11     11]\n",
+      " ...\n",
+      " [207993 208009 208034 ... 209369 209390 209406]\n",
+      " [208009 208034 208062 ... 209390 209406 209436]\n",
+      " [208034 208062 208084 ... 209406 209436 209451]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[    11     11     14 ... 209436 209451 209451]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "X = X.reshape((X.shape[0], X.shape[1], 1))"
    ]
   },
   {
